--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -48,4 +48,111 @@ body{
     }
     //home page scss ends //
 
+    //list view scss start //
+    .list-view-section{
+        .nav-tabs{
+            border-bottom: none;
+            li{
+                padding: 10px;
+                a{
+                    border: none;
+                    font-size: 16px;
+                    padding: 0;
+                    &:hover,&:focus,&:active,&:visited{
+                        border: none;
+                        background: none;
+                    }
+                    
+                }
+                &:first-child{
+                    padding-left: 0;
+                    a{
+                        padding-left: 0;
+                    }
+                }
+                &.active{
+                    a{
+                        font-weight: bold;
+                        border-bottom: 2px solid #555; 
+                    }
+                    &:hover,&:focus,&:active,&:visited{
+                        a{
+                            font-weight: bold;
+                            border-bottom: 2px solid #555; 
+                            background: none;
+                        }
+                    }
+                }
+            }
+        }
+        .tab-content{
+            margin-top: 20px;
+            margin-bottom: 40px;
+            .category-wrapper{
+                border: 1px solid #555;
+                border-radius: 4px;
+                padding: 10px;
+                >a{
+                    color: #000000;
+                    font-size: 16px;
+                    font-weight: 700;
+                    margin-bottom: 10px;
+                    display: inline-block;
+                }
+                ul{
+                    margin-left: 20px;
+                    li{
+                        a{
+                            color: #000000;
+                            font-size: 13px;
+                            padding: 5px 0;
+                            display: inline-block;
+                        }
+                    }
+                }
+            }
+            .list-wrapper{
+                padding: 0;
+                border: 1px solid #555;
+                border-radius: 4px;
+                padding: 10px;
+                .list-single{
+                    border: 1px solid #555;
+                    border-radius: 4px;
+                    margin-bottom: 15px;
+                    padding: 10px;
+                    .description{
+                        padding: 0;
+                        h2{
+                            margin: 0;
+                            font-size: 16px;
+                            font-weight: 600;
+                            margin-bottom: 5px;
+                        }
+                        .active-star{
+                            color: #ffc107;
+                        }
+                        p{
+                            font-size: 14px;
+                            i{
+                                margin-right: 5px;
+                            }
+                        }
+                    }
+                    .description-right{
+                        ul{
+                            li{
+                                margin-bottom: 5px;
+                            }
+                        }
+                    }
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+    }
+    //list view scss ends //
+
 }
